--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^5.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-combine-routers": "^4.0.2",
     "koa-compose": "^4.1.0",
     "koa-helmet": "^6.1.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.3",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "mongoose": "^6.2.6",
