--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "moment": "^2.29.4",
     "mongoose": "^6.2.6",
     "node-redis-retry-strategy": "^2.1.1",
+    "nodemailer": "^6.7.2",
     "redis": "^4.0.4",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
